# earr

./: README.md
backend/: .env.example  Cargo.toml
backend/src/domain/: repository.rs
backend/src/domain/entity/: audio.rs
backend/src/domain/entity/audio/: artist.rs  cover.rs  genre.rs  title.rs  year.rs
backend/src/domain/repository/: audio_gatherer_repository.rs
backend/src/infrastructure/: repository.rs
backend/src/infrastructure/repository/: audio_gatherer_repository.rs  filesystem_audio_gatherer_repository.rs
backend/src/infrastructure/repository/audio_gatherer_repository/: audio_parser.rs  filesystem_audio_gatherer_repository.rs
backend/src/infrastructure/repository/audio_gatherer_repository/audio_parser/: audiotags.rs  ffmpeg.rs  resilient_audio_parser.rs
backend/src/infrastructure/repository/filesystem_audio_gatherer_repository/: audio_parser.rs
backend/src/infrastructure/repository/filesystem_audio_gatherer_repository/audio_parser/: audiotags.rs  ffmpeg.rs
