[package]
name = "earr"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.75"
audiotags = "0.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
derive-getters = "0.3.0"
derive_builder = "0.12.0"
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
walkdir = "2.4.0"
